"gallery" block: fix for aligncenter

--- a/_source/scss/content/_images.scss
+++ b/_source/scss/content/_images.scss
@@ -101,7 +101,9 @@ figcaption,
 	
 	// Alignment variations
 	&.aligncenter {
-		justify-content: center;
+		.blocks-gallery-grid {
+			justify-content: center;
+		}
 	}
 	&.alignleft {
 		@extend .alignleft;
